--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenidos</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h1>Este es el titulo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laborum voluptate nostrum magnam cupiditate enim unde qui velit autem dolore molestias fugiat sunt, sint cumque perspiciatis quam, architecto, amet doloribus!</p>
+    <p>Parrafo agregado desde Github</p>
 </body>
 </html>
