Agregando parrafo desde Linux

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Este es el titulo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laborum voluptate nostrum magnam cupiditate enim unde qui velit autem dolore molestias fugiat sunt, sint cumque perspiciatis quam, architecto, amet doloribus!</p>
+    <p>Agregando parrafo desde Linux</p>
 </body>
 </html>
